# qt-dlp

./: LICENSE  README.md  pyproject.toml
src/qt_dlp/: __about__.py  __init__.py
